Perkin-UAT/force-app/main/default/objects/Consumable_Direct_DB__c/Consumable_Direct_DB__c.object-meta.xml
<CustomObject>
    <label>Consumable Direct DB</label>
    <nameField>
        <label>Consumable Direct DB Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consumable Direct DB</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>