Perkin-UAT/force-app/main/default/objects/Consumable_Direct_DB__c/fields/Address_3__c.field-meta.xml
<CustomField>
    <fullName>Address_3__c</fullName>
    <label>Address_3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>