Perkin-UAT/force-app/main/default/objects/Consumable_Direct_DB__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>