Perkin-UAT/force-app/main/default/objects/Consumable_Direct_DB__c/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <label>Contact_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>