Perkin-UAT/force-app/main/default/objects/Consumable_Direct_DB__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <label>LastName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>