Perkin-UAT/force-app/main/default/objects/Consumable_Direct_DB__c/fields/Name_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Name_Suffix__c</fullName>
    <label>Name Suffix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>