Perkin-UAT/force-app/main/default/objects/Consumable_Direct_DB__c/listViews/ARQ_000739_Consumable_Direct_DB.listView-meta.xml
<ListView>
    <fullName>ARQ_000739_Consumable_Direct_DB</fullName>
    <filterScope>Queue</filterScope>
    <label>SupportGroup</label>
    <queue>ARQ_000670</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>